# Copyright (c) 2023 Diemit <598757652@qq.com>
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

amdgpu_lib_deps = []
intel_lib_deps = []
wifi_lib_deps = []
rtw88_lib_deps = []
rtl_bt_lib_deps = []
radeon_lib_deps = []
nvidia_lib_deps = []

amdgpu_lib_items = [
  "raven2_sdma.bin",
  "raven_ta.bin",
  "polaris11_ce_2.bin",
  "aldebaran_sdma.bin",
  "aldebaran_sos.bin",
  "psp_13_0_5_ta.bin",
  "topaz_ce.bin",
  "navi10_smc.bin",
  "vega20_asd.bin",
  "polaris10_smc_sk.bin",
  "sienna_cichlid_vcn.bin",
  "cyan_skillfish2_sdma.bin",
  "gc_11_0_0_mes_2.bin",
  "beige_goby_sdma.bin",
  "gc_10_3_6_rlc.bin",
  "hawaii_mec.bin",
  "green_sardine_pfp.bin",
  "gc_11_0_2_pfp.bin",
  "kaveri_vce.bin",
  "raven_me.bin",
  "psp_14_0_0_toc.bin",
  "arcturus_smc.bin",
  "tonga_smc.bin",
  "arcturus_sos.bin",
  "picasso_mec2.bin",
  "raven2_me.bin",
  "gc_11_5_0_mes_2.bin",
  "polaris12_mec_2.bin",
  "oland_rlc.bin",
  "kabini_vce.bin",
  "psp_13_0_4_ta.bin",
  "kabini_sdma1.bin",
  "topaz_rlc.bin",
  "gc_11_0_0_me.bin",
  "psp_13_0_7_sos.bin",
  "green_sardine_me.bin",
  "navi12_smc.bin",
  "picasso_sdma.bin",
  "beige_goby_pfp.bin",
  "navi12_asd.bin",
  "fiji_mec.bin",
  "sdma_6_0_0.bin",
  "polaris11_vce.bin",
  "stoney_me.bin",
  "beige_goby_mec2.bin",
  "kaveri_mec.bin",
  "hawaii_pfp.bin",
  "beige_goby_ce.bin",
  "topaz_k_smc.bin",
  "vangogh_asd.bin",
  "picasso_vcn.bin",
  "hawaii_uvd.bin",
  "polaris10_pfp_2.bin",
  "tahiti_me.bin",
  "tonga_me.bin",
  "vegam_vce.bin",
  "polaris10_me.bin",
  "gc_10_3_6_pfp.bin",
  "yellow_carp_sdma.bin",
  "gc_10_3_6_mec2.bin",
  "kabini_ce.bin",
  "gc_10_3_7_mec.bin",
  "kabini_me.bin",
  "dimgrey_cavefish_dmcub.bin",
  "psp_13_0_10_sos.bin",
  "vegam_smc.bin",
  "topaz_mec.bin",
  "dimgrey_cavefish_vcn.bin",
  "arcturus_asd.bin",
  "gc_11_0_2_me.bin",
  "yellow_carp_mec.bin",
  "psp_13_0_0_ta.bin",
  "raven_rlc.bin",
  "beige_goby_mec.bin",
  "vangogh_mec2.bin",
  "verde_k_smc.bin",
  "polaris10_sdma1.bin",
  "navi14_smc.bin",
  "oland_me.bin",
  "navi14_mec.bin",
  "tonga_vce.bin",
  "gc_11_5_0_mes1.bin",
  "navy_flounder_mec2.bin",
  "gc_10_3_7_pfp.bin",
  "carrizo_uvd.bin",
  "pitcairn_rlc.bin",
  "tonga_mec.bin",
  "vega10_gpu_info.bin",
  "vcn_3_1_2.bin",
  "navi12_vcn.bin",
  "hawaii_sdma.bin",
  "vegam_rlc.bin",
  "gc_11_0_0_pfp.bin",
  "vegam_sdma1.bin",
  "aldebaran_ta.bin",
  "pitcairn_smc.bin",
  "hainan_smc.bin",
  "kabini_rlc.bin",
  "navi10_ta.bin",
  "vega10_rlc.bin",
  "tonga_rlc.bin",
  "vega12_smc.bin",
  "renoir_asd.bin",
  "gc_11_0_4_mes_2.bin",
  "sdma_6_1_0.bin",
  "navi12_dmcu.bin",
  "navi14_mec2.bin",
  "verde_rlc.bin",
  "arcturus_vcn.bin",
  "navy_flounder_mec.bin",
  "navi14_ta.bin",
  "bonaire_vce.bin",
  "tonga_uvd.bin",
  "sienna_cichlid_sdma.bin",
  "beige_goby_sos.bin",
  "green_sardine_mec.bin",
  "navi14_me_wks.bin",
  "renoir_me.bin",
  "arcturus_sdma.bin",
  "carrizo_rlc.bin",
  "psp_13_0_6_sos.bin",
  "polaris11_sdma1.bin",
  "arcturus_rlc.bin",
  "vcn_4_0_0.bin",
  "gc_11_5_0_rlc.bin",
  "bonaire_rlc.bin",
  "gc_11_0_1_me.bin",
  "polaris12_ce.bin",
  "gc_11_5_2_imu.bin",
  "polaris12_32_mc.bin",
  "dimgrey_cavefish_pfp.bin",
  "navi12_mec.bin",
  "yellow_carp_mec2.bin",
  "vcn_4_0_6_1.bin",
  "gc_11_0_0_rlc.bin",
  "navi14_rlc.bin",
  "raven2_ta.bin",
  "renoir_mec.bin",
  "vega20_ce.bin",
  "navy_flounder_vcn.bin",
  "psp_13_0_7_ta.bin",
  "bonaire_me.bin",
  "polaris11_pfp_2.bin",
  "picasso_mec.bin",
  "bonaire_sdma.bin",
  "topaz_sdma1.bin",
  "raven_mec.bin",
  "navi14_ce_wks.bin",
  "kabini_pfp.bin",
  "aldebaran_vcn.bin",
  "psp_13_0_10_ta.bin",
  "navi14_gpu_info.bin",
  "navi12_sdma1.bin",
  "raven2_vcn.bin",
  "kabini_sdma.bin",
  "hainan_ce.bin",
  "polaris11_mec.bin",
  "dcn_3_1_6_dmcub.bin",
  "sdma_5_2_6.bin",
  "gc_11_0_1_pfp.bin",
  "navi10_sdma1.bin",
  "pitcairn_pfp.bin",
  "vega10_ce.bin",
  "carrizo_sdma1.bin",
  "psp_13_0_4_toc.bin",
  "polaris12_mec2.bin",
  "vega12_sdma.bin",
  "raven_ce.bin",
  "cyan_skillfish2_me.bin",
  "navi12_rlc.bin",
  "polaris11_k_smc.bin",
  "gc_11_0_4_me.bin",
  "psp_14_0_4_ta.bin",
  "gc_11_0_2_mec.bin",
  "vega12_sdma1.bin",
  "sienna_cichlid_rlc.bin",
  "green_sardine_mec2.bin",
  "hawaii_smc.bin",
  "navi14_mec_wks.bin",
  "mullins_rlc.bin",
  "kaveri_ce.bin",
  "polaris11_pfp.bin",
  "tahiti_ce.bin",
  "vangogh_me.bin",
  "oland_mc.bin",
  "beige_goby_vcn.bin",
  "pitcairn_uvd.bin",
  "vcn_4_0_6.bin",
  "vega10_mec.bin",
  "dimgrey_cavefish_ta.bin",
  "navi14_sos.bin",
  "smu_13_0_6.bin",
  "vega10_sdma1.bin",
  "vangogh_rlc.bin",
  "sdma_6_1_2.bin",
  "vpe_6_1_3.bin",
  "vega10_sos.bin",
  "dcn_3_2_0_dmcub.bin",
  "gc_11_5_1_imu.bin",
  "raven_mec2.bin",
  "vega12_gpu_info.bin",
  "polaris12_k_mc.bin",
  "polaris12_me_2.bin",
  "tahiti_mc.bin",
  "stoney_ce.bin",
  "vega10_sdma.bin",
  "fiji_pfp.bin",
  "polaris12_sdma.bin",
  "psp_13_0_6_ta.bin",
  "mullins_pfp.bin",
  "navi10_ce.bin",
  "aldebaran_mec2.bin",
  "dimgrey_cavefish_me.bin",
  "sdma_4_4_2.bin",
  "polaris11_uvd.bin",
  "hawaii_k_smc.bin",
  "navi14_ce.bin",
  "vega10_acg_smc.bin",
  "pitcairn_me.bin",
  "picasso_rlc_am4.bin",
  "polaris12_mec.bin",
  "cyan_skillfish2_ce.bin",
  "navy_flounder_dmcub.bin",
  "hainan_k_smc.bin",
  "gc_11_0_1_mes.bin",
  "gc_11_5_1_mes1.bin",
  "gc_10_3_6_me.bin",
  "gc_11_0_0_rlc_1.bin",
  "psp_14_0_1_ta.bin",
  "vega10_pfp.bin",
  "vangogh_sdma.bin",
  "tonga_pfp.bin",
  "stoney_mec.bin",
  "vega10_asd.bin",
  "polaris10_sdma.bin",
  "carrizo_mec.bin",
  "renoir_dmcub.bin",
  "psp_14_0_0_ta.bin",
  "gc_11_5_1_mes_2.bin",
  "renoir_rlc.bin",
  "polaris10_k2_smc.bin",
  "verde_smc.bin",
  "dimgrey_cavefish_sdma.bin",
  "navy_flounder_ce.bin",
  "psp_13_0_8_asd.bin",
  "dimgrey_cavefish_smc.bin",
  "navi14_me.bin",
  "pitcairn_k_smc.bin",
  "arcturus_gpu_info.bin",
  "navy_flounder_sdma.bin",
  "polaris12_sdma1.bin",
  "gc_10_3_7_ce.bin",
  "navi12_mec2.bin",
  "vpe_6_1_1.bin",
  "psp_14_0_4_toc.bin",
  "gc_11_5_1_me.bin",
  "raven_kicker_rlc.bin",
  "hawaii_vce.bin",
  "navi12_ce.bin",
  "gc_11_0_4_rlc.bin",
  "gc_11_5_2_me.bin",
  "kaveri_uvd.bin",
  "picasso_me.bin",
  "polaris10_mc.bin",
  "vega12_sos.bin",
  "gc_11_0_1_mes_2.bin",
  "tonga_sdma1.bin",
  "picasso_rlc.bin",
  "sienna_cichlid_smc.bin",
  "polaris12_mc.bin",
  "renoir_pfp.bin",
  "cyan_skillfish2_mec2.bin",
  "navi12_pfp.bin",
  "raven2_mec2.bin",
  "polaris10_mec2_2.bin",
  "polaris11_smc.bin",
  "carrizo_pfp.bin",
  "kaveri_me.bin",
  "tonga_ce.bin",
  "sienna_cichlid_mec2.bin",
  "dimgrey_cavefish_ce.bin",
  "fiji_uvd.bin",
  "tonga_k_smc.bin",
  "topaz_pfp.bin",
  "polaris11_sdma.bin",
  "tonga_sdma.bin",
  "psp_13_0_8_ta.bin",
  "vega10_me.bin",
  "polaris10_smc.bin",
  "fiji_smc.bin",
  "polaris11_mec2_2.bin",
  "beige_goby_me.bin",
  "verde_uvd.bin",
  "polaris11_me_2.bin",
  "mullins_ce.bin",
  "vegam_me.bin",
  "yellow_carp_pfp.bin",
  "fiji_sdma1.bin",
  "gc_11_0_3_mes1.bin",
  "sienna_cichlid_me.bin",
  "navi10_mec2.bin",
  "vangogh_vcn.bin",
  "oland_smc.bin",
  "isp_4_1_1.bin",
  "navi10_mec.bin",
  "polaris11_me.bin",
  "vega12_me.bin",
  "raven_dmcu.bin",
  "navi10_sos.bin",
  "polaris12_me.bin",
  "bonaire_smc.bin",
  "polaris12_rlc.bin",
  "hainan_pfp.bin",
  "tonga_mc.bin",
  "gc_11_5_0_me.bin",
  "polaris12_smc.bin",
  "cyan_skillfish2_sdma1.bin",
  "sienna_cichlid_ta.bin",
  "gc_11_0_4_imu.bin",
  "polaris10_k_smc.bin",
  "cyan_skillfish2_rlc.bin",
  "gc_11_0_4_mec.bin",
  "yellow_carp_vcn.bin",
  "vegam_ce.bin",
  "polaris10_ce_2.bin",
  "carrizo_ce.bin",
  "gc_11_5_2_mes_2.bin",
  "vcn_4_0_3.bin",
  "polaris12_vce.bin",
  "tahiti_smc.bin",
  "navi10_sdma.bin",
  "vega20_mec2.bin",
  "gc_11_0_2_rlc.bin",
  "oland_pfp.bin",
  "oland_uvd.bin",
  "vega20_sos.bin",
  "kaveri_sdma.bin",
  "navy_flounder_ta.bin",
  "gc_11_5_1_mec.bin",
  "navi12_ta.bin",
  "renoir_sdma.bin",
  "psp_13_0_5_asd.bin",
  "vega20_uvd.bin",
  "vangogh_ce.bin",
  "carrizo_sdma.bin",
  "fiji_me.bin",
  "dimgrey_cavefish_mec.bin",
  "polaris11_smc_sk.bin",
  "gc_11_0_2_mes1.bin",
  "polaris10_me_2.bin",
  "picasso_asd.bin",
  "sienna_cichlid_mec.bin",
  "green_sardine_ce.bin",
  "gc_11_0_4_mes1.bin",
  "vega20_me.bin",
  "beige_goby_dmcub.bin",
  "smu_13_0_10.bin",
  "gc_11_0_0_mes1.bin",
  "bonaire_k_smc.bin",
  "navy_flounder_pfp.bin",
  "topaz_mec2.bin",
  "navi10_pfp.bin",
  "renoir_ta.bin",
  "gc_11_0_1_mes1.bin",
  "bonaire_mec.bin",
  "vega20_smc.bin",
  "sienna_cichlid_pfp.bin",
  "tahiti_k_smc.bin",
  "fiji_sdma.bin",
  "yellow_carp_ce.bin",
  "picasso_ta.bin",
  "dcn_3_1_4_dmcub.bin",
  "smu_13_0_0.bin",
  "polaris10_uvd.bin",
  "bonaire_ce.bin",
  "navy_flounder_me.bin",
  "renoir_gpu_info.bin",
  "kaveri_rlc.bin",
  "gc_11_5_1_pfp.bin",
  "banks_k_2_smc.bin",
  "raven_pfp.bin",
  "verde_mc.bin",
  "polaris12_pfp_2.bin",
  "green_sardine_dmcub.bin",
  "gc_11_0_1_mec.bin",
  "polaris12_uvd.bin",
  "verde_me.bin",
  "vangogh_toc.bin",
  "gc_10_3_6_mec.bin",
  "gc_11_0_1_rlc.bin",
  "polaris10_mec.bin",
  "vegam_pfp.bin",
  "vega20_ta.bin",
  "sdma_6_0_1.bin",
  "raven2_pfp.bin",
  "dimgrey_cavefish_rlc.bin",
  "gc_11_0_2_imu.bin",
  "navi10_asd.bin",
  "gc_11_5_0_pfp.bin",
  "verde_pfp.bin",
  "polaris12_pfp.bin",
  "sienna_cichlid_ce.bin",
  "yellow_carp_toc.bin",
  "polaris12_mec2_2.bin",
  "stoney_vce.bin",
  "fiji_mc.bin",
  "hawaii_rlc.bin",
  "stoney_sdma.bin",
  "kaveri_mec2.bin",
  "renoir_vcn.bin",
  "beige_goby_smc.bin",
  "picasso_pfp.bin",
  "polaris11_mc.bin",
  "mullins_sdma.bin",
  "fiji_rlc.bin",
  "psp_13_0_5_toc.bin",
  "polaris11_k2_smc.bin",
  "vega12_vce.bin",
  "carrizo_me.bin",
  "hawaii_me.bin",
  "hainan_mc.bin",
  "gc_11_0_4_mes.bin",
  "navi14_vcn.bin",
  "tonga_mec2.bin",
  "vcn_4_0_2.bin",
  "bonaire_mc.bin",
  "pitcairn_ce.bin",
  "sdma_5_2_7.bin",
  "dcn_3_2_1_dmcub.bin",
  "navi12_sos.bin",
  "aldebaran_sjt_mec.bin",
  "yellow_carp_me.bin",
  "sdma_6_1_1.bin",
  "dcn_3_5_dmcub.bin",
  "gc_11_5_2_mec.bin",
  "gc_11_0_4_pfp.bin",
  "yellow_carp_ta.bin",
  "tahiti_pfp.bin",
  "raven2_rlc.bin",
  "cyan_skillfish2_mec.bin",
  "arcturus_mec.bin",
  "vega20_rlc.bin",
  "psp_14_0_1_toc.bin",
  "vega10_mec2.bin",
  "raven_gpu_info.bin",
  "renoir_mec2.bin",
  "vangogh_mec.bin",
  "vega20_pfp.bin",
  "gc_11_0_3_rlc.bin",
  "vangogh_dmcub.bin",
  "polaris10_ce.bin",
  "topaz_sdma.bin",
  "hainan_me.bin",
  "green_sardine_ta.bin",
  "kabini_mec.bin",
  "oland_k_smc.bin",
  "stoney_pfp.bin",
  "gc_10_3_7_rlc.bin",
  "navi10_rlc.bin",
  "fiji_vce.bin",
  "gc_11_5_0_mec.bin",
  "vega12_rlc.bin",
  "gc_11_5_0_imu.bin",
  "oland_ce.bin",
  "navi10_me.bin",
  "mullins_sdma1.bin",
  "dimgrey_cavefish_mec2.bin",
  "vega10_uvd.bin",
  "sienna_cichlid_dmcub.bin",
  "beige_goby_rlc.bin",
  "picasso_gpu_info.bin",
  "gc_11_5_2_mes1.bin",
  "vegam_mec.bin",
  "gc_11_0_0_mec.bin",
  "polaris11_k_mc.bin",
  "vegam_mec2.bin",
  "beige_goby_ta.bin",
  "vega12_ce.bin",
  "psp_13_0_0_sos.bin",
  "gc_11_0_3_me.bin",
  "green_sardine_asd.bin",
  "mullins_uvd.bin",
  "sdma_6_0_2.bin",
  "yellow_carp_asd.bin",
  "sdma_6_0_3.bin",
  "navi14_pfp.bin",
  "hawaii_mc.bin",
  "stoney_uvd.bin",
  "aldebaran_smc.bin",
  "green_sardine_vcn.bin",
  "vcn_4_0_4.bin",
  "mullins_mec.bin",
  "vega10_vce.bin",
  "stoney_rlc.bin",
  "carrizo_vce.bin",
  "navy_flounder_sos.bin",
  "vega12_mec2.bin",
  "gc_11_5_1_rlc.bin",
  "gc_11_0_3_mes_2.bin",
  "raven2_mec.bin",
  "topaz_me.bin",
  "gc_11_0_0_imu.bin",
  "arcturus_ta.bin",
  "raven_vcn.bin",
  "raven2_gpu_info.bin",
  "carrizo_mec2.bin",
  "gc_9_4_3_mec.bin",
  "topaz_smc.bin",
  "hainan_rlc.bin",
  "raven2_ce.bin",
  "verde_ce.bin",
  "si58_mc.bin",
  "hawaii_ce.bin",
  "polaris10_vce.bin",
  "navi14_sdma.bin",
  "vega20_vce.bin",
  "gc_11_0_1_imu.bin",
  "vangogh_pfp.bin",
  "polaris10_mec_2.bin",
  "tahiti_rlc.bin",
  "green_sardine_rlc.bin",
  "gc_11_5_2_rlc.bin",
  "mullins_me.bin",
  "topaz_mc.bin",
  "renoir_ce.bin",
  "vega20_sdma1.bin",
  "mullins_vce.bin",
  "polaris12_k_smc.bin",
  "vega12_asd.bin",
  "bonaire_pfp.bin",
  "gc_10_3_6_ce.bin",
  "green_sardine_sdma.bin",
  "cyan_skillfish2_pfp.bin",
  "polaris11_mec_2.bin",
  "aldebaran_sjt_mec2.bin",
  "kaveri_sdma1.bin",
  "psp_13_0_11_ta.bin",
  "bonaire_sdma1.bin",
  "dimgrey_cavefish_sos.bin",
  "polaris10_pfp.bin",
  "navi12_me.bin",
  "yellow_carp_dmcub.bin",
  "polaris11_ce.bin",
  "navi14_mec2_wks.bin",
  "dcn_3_1_5_dmcub.bin",
  "polaris10_mec2.bin",
  "hawaii_sdma1.bin",
  "gc_11_0_3_pfp.bin",
  "kabini_uvd.bin",
  "polaris11_mec2.bin",
  "navi12_sdma.bin",
  "vega20_sdma.bin",
  "psp_13_0_8_toc.bin",
  "vega12_uvd.bin",
  "gc_11_5_2_pfp.bin",
  "gc_10_3_7_mec2.bin",
  "gc_11_0_2_mes_2.bin",
  "raven_sdma.bin",
  "fiji_ce.bin",
  "psp_13_0_11_toc.bin",
  "gc_11_0_2_mes.bin",
  "polaris10_k_mc.bin",
  "vega12_mec.bin",
  "navy_flounder_smc.bin",
  "gc_11_0_3_imu.bin",
  "dcn_3_5_1_dmcub.bin",
  "aldebaran_rlc.bin",
  "pitcairn_mc.bin",
  "aldebaran_mec.bin",
  "navi14_pfp_wks.bin",
  "smu_13_0_7.bin",
  "vegam_sdma.bin",
  "polaris11_rlc.bin",
  "navi12_gpu_info.bin",
  "navi10_gpu_info.bin",
  "sienna_cichlid_sos.bin",
  "gc_11_0_0_mes.bin",
  "vpe_6_1_0.bin",
  "raven_asd.bin",
  "umsch_mm_4_0_0.bin",
  "vega12_pfp.bin",
  "vega20_mec.bin",
  "polaris12_ce_2.bin",
  "tahiti_uvd.bin",
  "arcturus_mec2.bin",
  "gc_10_3_7_me.bin",
  "navi10_vcn.bin",
  "raven2_asd.bin",
  "navi14_asd.bin",
  "picasso_ce.bin",
  "gc_11_0_3_mec.bin",
  "yellow_carp_rlc.bin",
  "navy_flounder_rlc.bin",
  "vegam_uvd.bin",
  "gc_9_4_3_rlc.bin",
  "polaris10_rlc.bin",
  "vega10_smc.bin",
  "bonaire_uvd.bin",
  "navi14_sdma1.bin",
  "vcn_4_0_5.bin",
  "fiji_mec2.bin",
  "kaveri_pfp.bin",
]

intel_lib_items = [
  "ehl_huc_9.0.0.bin",
  "cml_guc_49.0.1.bin",
  "tgl_dmc_ver2_06.bin",
  "adls_dmc_ver2_01.bin",
  "skl_huc_ver01_07_1398.bin",
  "kbl_huc_ver02_00_1810.bin",
  "adlp_guc_62.0.3.bin",
  "adlp_guc_70.bin",
  "rkl_dmc_ver2_02.bin",
  "icl_dmc_ver1_09.bin",
  "skl_guc_ver4.bin",
  "tgl_guc_49.0.1.bin",
  "glk_guc_33.0.0.bin",
  "bxt_huc_ver01_8_2893.bin",
  "bxt_guc_33.0.0.bin",
  "bxt_dmc_ver1_07.bin",
  "tgl_dmc_ver2_08.bin",
  "kbl_guc_ver9_14.bin",
  "kbl_dmc_ver1_04.bin",
  "skl_guc_32.0.3.bin",
  "adlp_dmc_ver2_16.bin",
  "icl_guc_62.0.0.bin",
  "kbl_guc_49.0.1.bin",
  "bxt_guc_49.0.1.bin",
  "cnl_dmc_ver1_07.bin",
  "skl_guc_33.0.0.bin",
  "skl_guc_49.0.1.bin",
  "icl_guc_32.0.3.bin",
  "bxt_dmc_ver1.bin",
  "dg1_guc_62.0.0.bin",
  "bxt_huc_2.0.0.bin",
  "icl_huc_9.0.0.bin",
  "cml_guc_33.0.0.bin",
  "tgl_huc.bin",
  "skl_dmc_ver1_27.bin",
  "ehl_guc_62.0.0.bin",
  "skl_dmc_ver1_23.bin",
  "skl_guc_ver1.bin",
  "dg1_dmc_ver2_02.bin",
  "bxt_huc_ver01_07_1398.bin",
  "tgl_huc_7.9.3.bin",
  "bxt_guc_ver9_29.bin",
  "glk_guc_49.0.1.bin",
  "kbl_guc_ver9_39.bin",
  "adlp_dmc_ver2_10.bin",
  "tgl_guc_35.2.0.bin",
  "cnl_dmc_ver1_06.bin",
  "kbl_guc_32.0.3.bin",
  "ehl_guc_33.0.4.bin",
  "icl_guc_33.0.0.bin",
  "glk_huc_ver03_01_2893.bin",
  "tgl_guc_62.0.0.bin",
  "rkl_dmc_ver2_03.bin",
  "adlp_dmc_ver2_12.bin",
  "tgl_dmc_ver2_12.bin",
  "adlp_dmc_ver2_09.bin",
  "kbl_guc_33.0.0.bin",
  "tgl_huc_7.5.0.bin",
  "ehl_guc_49.0.1.bin",
  "glk_dmc_ver1_04.bin",
  "tgl_dmc_ver2_04.bin",
  "skl_huc_2.0.0.bin",
  "bxt_guc_62.0.0.bin",
  "bxt_guc_32.0.3.bin",
  "kbl_dmc_ver1.bin",
  "glk_guc_32.0.3.bin",
  "cml_huc_4.0.0.bin",
  "icl_huc_ver8_4_3238.bin",
  "skl_guc_62.0.0.bin",
  "tgl_huc_7.0.3.bin",
  "kbl_huc_4.0.0.bin",
  "tgl_huc_7.0.12.bin",
  "dg1_huc_7.9.3.bin",
  "icl_guc_49.0.1.bin",
  "icl_dmc_ver1_07.bin",
  "skl_dmc_ver1_26.bin",
  "tgl_guc_70.bin",
  "skl_guc_ver6_1.bin",
  "kbl_dmc_ver1_01.bin",
  "skl_guc_ver6.bin",
  "glk_huc_4.0.0.bin",
  "bxt_guc_ver8_7.bin",
  "skl_dmc_ver1.bin",
  "cml_guc_62.0.0.bin",
  "kbl_guc_62.0.0.bin",
  "skl_guc_ver9_33.bin",
  "glk_guc_62.0.0.bin",
]

wifi_lib_items = [
  "iwlwifi-7265D-29.ucode",
  "iwlwifi-ty-a0-gf-a0-83.ucode",
  "iwlwifi-ty-a0-gf-a0.pnvm",
]

rtw88_lib_items = [
  "rtw8723d_fw.bin",
  "rtw8821c_fw.bin",
  "rtw8822b_fw.bin",
  "rtw8822c_fw.bin",
  "rtw8822c_wow_fw.bin",
]

rtl_bt_lib_items = [
  "rtl8192ee_fw.bin",
  "rtl8822b_fw.bin",
  "rtl8822b_config.bin",
  "rtl8723b_fw.bin",
  "rtl8821c_fw.bin",
  "rtl8821a_fw.bin",
  "rtl8852au_config.bin",
  "rtl8812ae_fw.bin",
  "rtl8822cu_config.bin",
  "rtl8723bs_config-OBDA8723.bin",
  "rtl8761b_fw.bin",
  "rtl8723d_fw.bin",
  "rtl8852au_fw.bin",
  "rtl8723bs_fw.bin",
  "rtl8723d_config.bin",
  "rtl8761a_fw.bin",
  "rtl8822cu_fw.bin",
  "rtl8821a_config.bin",
  "rtl8822cs_fw.bin",
  "rtl8723a_fw.bin",
  "rtl8822cs_config.bin",
  "rtl8761b_config.bin",
  "rtl8192eu_fw.bin",
  "rtl8821c_config.bin",
]

radeon_lib_items = [
  "KABINI_pfp.bin",
  "kaveri_ce.bin",
  "HAINAN_pfp.bin",
  "bonaire_ce.bin",
  "verde_ce.bin",
  "oland_ce.bin",
  "TAHITI_vce.bin",
  "BONAIRE_mec.bin",
  "TURKS_pfp.bin",
  "VERDE_rlc.bin",
  "CYPRESS_uvd.bin",
  "hainan_k_smc.bin",
  "tahiti_smc.bin",
  "HAWAII_me.bin",
  "RV740_smc.bin",
  "kaveri_sdma1.bin",
  "verde_me.bin",
  "CYPRESS_pfp.bin",
  "verde_pfp.bin",
  "pitcairn_k_smc.bin",
  "BARTS_me.bin",
  "hawaii_sdma1.bin",
  "tahiti_pfp.bin",
  "KABINI_rlc.bin",
  "REDWOOD_me.bin",
  "BONAIRE_me.bin",
  "R100_cp.bin",
  "RV620_me.bin",
  "tahiti_me.bin",
  "ARUBA_pfp.bin",
  "HAWAII_rlc.bin",
  "hawaii_ce.bin",
  "PITCAIRN_pfp.bin",
  "bonaire_me.bin",
  "HAWAII_ce.bin",
  "kabini_pfp.bin",
  "R600_pfp.bin",
  "BARTS_pfp.bin",
  "RV670_pfp.bin",
  "verde_rlc.bin",
  "CAICOS_pfp.bin",
  "OLAND_smc.bin",
  "HAINAN_rlc.bin",
  "OLAND_rlc.bin",
  "mullins_mec.bin",
  "oland_rlc.bin",
  "kaveri_uvd.bin",
  "CEDAR_smc.bin",
  "OLAND_mc.bin",
  "JUNIPER_smc.bin",
  "CYPRESS_smc.bin",
  "BONAIRE_mc.bin",
  "PALM_me.bin",
  "R600_me.bin",
  "VERDE_mc.bin",
  "mullins_sdma1.bin",
  "VERDE_smc.bin",
  "KABINI_sdma.bin",
  "RV610_me.bin",
  "tahiti_ce.bin",
  "RS780_me.bin",
  "RV635_pfp.bin",
  "OLAND_mc2.bin",
  "ARUBA_me.bin",
  "hainan_mc.bin",
  "tahiti_k_smc.bin",
  "KAVERI_mec.bin",
  "TAHITI_ce.bin",
  "KABINI_mec.bin",
  "verde_mc.bin",
  "BONAIRE_vce.bin",
  "RS690_cp.bin",
  "hainan_rlc.bin",
  "JUNIPER_me.bin",
  "kabini_uvd.bin",
  "RV710_smc.bin",
  "tahiti_rlc.bin",
  "hawaii_sdma.bin",
  "HAINAN_mc2.bin",
  "TURKS_smc.bin",
  "kaveri_pfp.bin",
  "RV730_smc.bin",
  "CEDAR_pfp.bin",
  "PITCAIRN_ce.bin",
  "RV710_me.bin",
  "TURKS_me.bin",
  "hawaii_rlc.bin",
  "CEDAR_me.bin",
  "BONAIRE_smc.bin",
  "HAINAN_me.bin",
  "RV770_me.bin",
  "TAHITI_mc2.bin",
  "RV635_me.bin",
  "kabini_sdma.bin",
  "bonaire_rlc.bin",
  "BARTS_smc.bin",
  "RS780_pfp.bin",
  "bonaire_vce.bin",
  "TAHITI_mc.bin",
  "MULLINS_pfp.bin",
  "mullins_sdma.bin",
  "KABINI_me.bin",
  "mullins_pfp.bin",
  "R600_rlc.bin",
  "KAVERI_me.bin",
  "SUMO_rlc.bin",
  "BONAIRE_pfp.bin",
  "CYPRESS_rlc.bin",
  "RS600_cp.bin",
  "VERDE_pfp.bin",
  "RV630_me.bin",
  "kabini_me.bin",
  "R200_cp.bin",
  "pitcairn_pfp.bin",
  "kaveri_vce.bin",
  "hawaii_mc.bin",
  "CAYMAN_smc.bin",
  "RV610_pfp.bin",
  "TURKS_mc.bin",
  "verde_k_smc.bin",
  "MULLINS_me.bin",
  "HAWAII_mec.bin",
  "OLAND_me.bin",
  "RV770_smc.bin",
  "CAICOS_mc.bin",
  "OLAND_ce.bin",
  "PITCAIRN_mc.bin",
  "RV630_pfp.bin",
  "KAVERI_rlc.bin",
  "RV670_me.bin",
  "SUMO_me.bin",
  "CAICOS_me.bin",
  "oland_smc.bin",
  "hawaii_pfp.bin",
  "RV770_uvd.bin",
  "RV730_pfp.bin",
  "HAINAN_smc.bin",
  "HAINAN_ce.bin",
  "HAWAII_sdma.bin",
  "RV730_me.bin",
  "PITCAIRN_smc.bin",
  "mullins_uvd.bin",
  "kabini_rlc.bin",
  "RV710_pfp.bin",
  "bonaire_pfp.bin",
  "hainan_pfp.bin",
  "PITCAIRN_rlc.bin",
  "CYPRESS_me.bin",
  "hawaii_uvd.bin",
  "pitcairn_ce.bin",
  "KAVERI_pfp.bin",
  "bonaire_uvd.bin",
  "SUMO2_me.bin",
  "R520_cp.bin",
  "SUMO_pfp.bin",
  "RV770_pfp.bin",
  "verde_smc.bin",
  "hawaii_me.bin",
  "TAHITI_smc.bin",
  "BONAIRE_ce.bin",
  "hainan_ce.bin",
  "hainan_smc.bin",
  "BTC_rlc.bin",
  "bonaire_sdma.bin",
  "PITCAIRN_mc2.bin",
  "tahiti_mc.bin",
  "mullins_rlc.bin",
  "TAHITI_pfp.bin",
  "TAHITI_rlc.bin",
  "KAVERI_ce.bin",
  "CAYMAN_rlc.bin",
  "MULLINS_sdma.bin",
  "kaveri_sdma.bin",
  "BONAIRE_mc2.bin",
  "TAHITI_uvd.bin",
  "mullins_vce.bin",
  "si58_mc.bin",
  "hawaii_vce.bin",
  "BONAIRE_rlc.bin",
  "hainan_me.bin",
  "HAWAII_mc.bin",
  "hawaii_mec.bin",
  "kabini_sdma1.bin",
  "hawaii_k_smc.bin",
  "REDWOOD_rlc.bin",
  "TAHITI_me.bin",
  "CAYMAN_pfp.bin",
  "BONAIRE_sdma.bin",
  "oland_mc.bin",
  "RV620_pfp.bin",
  "CAYMAN_mc.bin",
  "BONAIRE_uvd.bin",
  "bonaire_mec.bin",
  "CEDAR_rlc.bin",
  "PALM_pfp.bin",
  "oland_pfp.bin",
  "pitcairn_rlc.bin",
  "MULLINS_rlc.bin",
  "CAYMAN_me.bin",
  "REDWOOD_pfp.bin",
  "bonaire_mc.bin",
  "mullins_me.bin",
  "kaveri_rlc.bin",
  "kaveri_mec2.bin",
  "RV710_uvd.bin",
  "RS780_uvd.bin",
  "kabini_ce.bin",
  "R300_cp.bin",
  "kaveri_mec.bin",
  "VERDE_me.bin",
  "REDWOOD_smc.bin",
  "pitcairn_me.bin",
  "pitcairn_smc.bin",
  "hawaii_smc.bin",
  "MULLINS_mec.bin",
  "bonaire_sdma1.bin",
  "JUNIPER_rlc.bin",
  "R600_uvd.bin",
  "VERDE_mc2.bin",
  "JUNIPER_pfp.bin",
  "CAICOS_smc.bin",
  "bonaire_smc.bin",
  "PITCAIRN_me.bin",
  "oland_k_smc.bin",
  "ARUBA_rlc.bin",
  "R700_rlc.bin",
  "HAINAN_mc.bin",
  "banks_k_2_smc.bin",
  "kabini_mec.bin",
  "pitcairn_mc.bin",
  "KABINI_ce.bin",
  "VERDE_ce.bin",
  "oland_me.bin",
  "OLAND_pfp.bin",
  "kaveri_me.bin",
  "MULLINS_ce.bin",
  "KAVERI_sdma.bin",
  "HAWAII_pfp.bin",
  "mullins_ce.bin",
  "HAWAII_smc.bin",
  "HAWAII_mc2.bin",
  "bonaire_k_smc.bin",
  "BARTS_mc.bin",
  "SUMO_uvd.bin",
  "SUMO2_pfp.bin",
  "R420_cp.bin",
  "kabini_vce.bin",
]

nvidia_lib_items = [
  "gp104/acr/ucode_unload.bin",
  "gp104/acr/bl.bin",
  "gp104/acr/ucode_load.bin",
  "gp104/acr/unload_bl.bin",
  "gp104/gr/gpccs_bl.bin",
  "gp104/gr/fecs_bl.bin",
  "gp104/gr/sw_ctx.bin",
  "gp104/gr/gpccs_sig.bin",
  "gp104/gr/fecs_data.bin",
  "gp104/gr/sw_nonctx.bin",
  "gp104/gr/gpccs_inst.bin",
  "gp104/gr/sw_bundle_init.bin",
  "gp104/gr/gpccs_data.bin",
  "gp104/gr/sw_method_init.bin",
  "gp104/gr/fecs_sig.bin",
  "gp104/gr/fecs_inst.bin",
  "gp104/sec2/desc-1.bin",
  "gp104/sec2/desc.bin",
  "gp104/sec2/sig-1.bin",
  "gp104/sec2/image.bin",
  "gp104/sec2/sig.bin",
  "gp104/sec2/image-1.bin",
  "gp104/nvdec/scrubber.bin",
  "gm206/acr/bl.bin",
  "gm206/acr/ucode_unload.bin",
  "gm206/acr/ucode_load.bin",
  "gm206/gr/gpccs_bl.bin",
  "gm206/gr/sw_ctx.bin",
  "gm206/gr/gpccs_sig.bin",
  "gm206/gr/fecs_bl.bin",
  "gm206/gr/fecs_data.bin",
  "gm206/gr/sw_nonctx.bin",
  "gm206/gr/gpccs_inst.bin",
  "gm206/gr/sw_bundle_init.bin",
  "gm206/gr/gpccs_data.bin",
  "gm206/gr/sw_method_init.bin",
  "gm206/gr/fecs_sig.bin",
  "gm206/gr/fecs_inst.bin",
  "ga107/gsp/booter_load-535.113.01.bin",
  "ga107/gsp/booter_unload-535.113.01.bin",
  "ga107/gsp/gsp-535.113.01.bin",
  "ga107/gsp/bootloader-535.113.01.bin",
  "ga107/acr/ucode_ahesasc.bin",
  "ga107/acr/ucode_unload.bin",
  "ga107/acr/ucode_asb.bin",
  "ga107/gr/gpccs_bl.bin",
  "ga107/gr/gpccs_sig.bin",
  "ga107/gr/fecs_bl.bin",
  "ga107/gr/NET_img.bin",
  "ga107/gr/fecs_sig.bin",
  "ga107/sec2/desc.bin",
  "ga107/sec2/hs_bl_sig.bin",
  "ga107/sec2/image.bin",
  "ga107/sec2/sig.bin",
  "ga107/nvdec/scrubber.bin",
  "gk20a/sw_ctx.bin",
  "gk20a/fecs_data.bin",
  "gk20a/sw_nonctx.bin",
  "gk20a/gpccs_inst.bin",
  "gk20a/sw_bundle_init.bin",
  "gk20a/gpccs_data.bin",
  "gk20a/sw_method_init.bin",
  "gk20a/fecs_inst.bin",
  "tu117/acr/ucode_ahesasc.bin",
  "tu117/acr/ucode_unload.bin",
  "tu117/acr/ucode_asb.bin",
  "tu117/acr/bl.bin",
  "tu117/acr/unload_bl.bin",
  "tu117/gr/gpccs_bl.bin",
  "tu117/gr/sw_ctx.bin",
  "tu117/gr/gpccs_sig.bin",
  "tu117/gr/fecs_bl.bin",
  "tu117/gr/fecs_data.bin",
  "tu117/gr/sw_nonctx.bin",
  "tu117/gr/sw_veid_bundle_init.bin",
  "tu117/gr/gpccs_inst.bin",
  "tu117/gr/sw_bundle_init.bin",
  "tu117/gr/gpccs_data.bin",
  "tu117/gr/sw_method_init.bin",
  "tu117/gr/fecs_sig.bin",
  "tu117/gr/fecs_inst.bin",
  "tu117/sec2/desc.bin",
  "tu117/sec2/image.bin",
  "tu117/sec2/sig.bin",
  "tu117/nvdec/scrubber.bin",
  "tu117/gsp/booter_load-535.113.01.bin",
  "tu117/gsp/booter_unload-535.113.01.bin",
  "tu117/gsp/bootloader-535.113.01.bin",
  "tu117/gsp/gsp-535.113.01.bin",
  "ga103/acr/ucode_ahesasc.bin",
  "ga103/acr/ucode_asb.bin",
  "ga103/acr/ucode_unload.bin",
  "ga103/gr/gpccs_bl.bin",
  "ga103/gr/gpccs_sig.bin",
  "ga103/gr/fecs_bl.bin",
  "ga103/gr/NET_img.bin",
  "ga103/gr/fecs_sig.bin",
  "ga103/nvdec/scrubber.bin",
  "ga103/sec2/desc.bin",
  "ga103/sec2/hs_bl_sig.bin",
  "ga103/sec2/image.bin",
  "ga103/sec2/sig.bin",
  "ga103/gsp/bootloader-535.113.01.bin",
  "ga103/gsp/booter_load-535.113.01.bin",
  "ga103/gsp/booter_unload-535.113.01.bin",
  "ga103/gsp/gsp-535.113.01.bin",
  "gp102/acr/ucode_unload.bin",
  "gp102/acr/bl.bin",
  "gp102/acr/ucode_load.bin",
  "gp102/acr/unload_bl.bin",
  "gp102/gr/gpccs_bl.bin",
  "gp102/gr/fecs_bl.bin",
  "gp102/gr/sw_ctx.bin",
  "gp102/gr/gpccs_sig.bin",
  "gp102/gr/fecs_data.bin",
  "gp102/gr/sw_nonctx.bin",
  "gp102/gr/gpccs_inst.bin",
  "gp102/gr/sw_bundle_init.bin",
  "gp102/gr/gpccs_data.bin",
  "gp102/gr/sw_method_init.bin",
  "gp102/gr/fecs_sig.bin",
  "gp102/gr/fecs_inst.bin",
  "gp102/sec2/desc-1.bin",
  "gp102/sec2/desc.bin",
  "gp102/sec2/sig-1.bin",
  "gp102/sec2/image.bin",
  "gp102/sec2/sig.bin",
  "gp102/sec2/image-1.bin",
  "gp102/nvdec/scrubber.bin",
  "gp100/acr/ucode_unload.bin",
  "gp100/acr/bl.bin",
  "gp100/acr/ucode_load.bin",
  "gp100/gr/gpccs_bl.bin",
  "gp100/gr/fecs_bl.bin",
  "gp100/gr/sw_ctx.bin",
  "gp100/gr/gpccs_sig.bin",
  "gp100/gr/fecs_data.bin",
  "gp100/gr/sw_nonctx.bin",
  "gp100/gr/gpccs_inst.bin",
  "gp100/gr/sw_bundle_init.bin",
  "gp100/gr/gpccs_data.bin",
  "gp100/gr/sw_method_init.bin",
  "gp100/gr/fecs_sig.bin",
  "gp100/gr/fecs_inst.bin",
  "gm200/acr/ucode_unload.bin",
  "gm200/acr/bl.bin",
  "gm200/acr/ucode_load.bin",
  "gm200/gr/gpccs_bl.bin",
  "gm200/gr/sw_ctx.bin",
  "gm200/gr/gpccs_sig.bin",
  "gm200/gr/fecs_bl.bin",
  "gm200/gr/fecs_data.bin",
  "gm200/gr/sw_nonctx.bin",
  "gm200/gr/gpccs_inst.bin",
  "gm200/gr/sw_bundle_init.bin",
  "gm200/gr/gpccs_data.bin",
  "gm200/gr/sw_method_init.bin",
  "gm200/gr/fecs_sig.bin",
  "gm200/gr/fecs_inst.bin",
  "ad102/gsp/booter_load-535.113.01.bin",
  "ad102/gsp/booter_unload-535.113.01.bin",
  "ad102/gsp/bootloader-535.113.01.bin",
  "tu10x/typec/ccg_boot.cyacd",
  "tu10x/typec/ccg_primary.cyacd",
  "tu10x/typec/ccg_secondary.cyacd",
  "ga106/acr/ucode_ahesasc.bin",
  "ga106/acr/ucode_asb.bin",
  "ga106/acr/ucode_unload.bin",
  "ga106/gr/gpccs_bl.bin",
  "ga106/gr/gpccs_sig.bin",
  "ga106/gr/fecs_bl.bin",
  "ga106/gr/NET_img.bin",
  "ga106/gr/fecs_sig.bin",
  "ga106/sec2/desc.bin",
  "ga106/sec2/hs_bl_sig.bin",
  "ga106/sec2/image.bin",
  "ga106/sec2/sig.bin",
  "ga106/nvdec/scrubber.bin",
  "ga106/gsp/booter_load-535.113.01.bin",
  "ga106/gsp/booter_unload-535.113.01.bin",
  "ga106/gsp/gsp-535.113.01.bin",
  "ga106/gsp/bootloader-535.113.01.bin",
  "tu102/gsp/booter_load-535.113.01.bin",
  "tu102/gsp/booter_unload-535.113.01.bin",
  "tu102/gsp/gsp-535.113.01.bin",
  "tu102/gsp/bootloader-535.113.01.bin",
  "tu102/acr/ucode_ahesasc.bin",
  "tu102/acr/ucode_unload.bin",
  "tu102/acr/ucode_asb.bin",
  "tu102/acr/bl.bin",
  "tu102/acr/unload_bl.bin",
  "tu102/gr/gpccs_bl.bin",
  "tu102/gr/sw_ctx.bin",
  "tu102/gr/gpccs_sig.bin",
  "tu102/gr/fecs_bl.bin",
  "tu102/gr/fecs_data.bin",
  "tu102/gr/sw_nonctx.bin",
  "tu102/gr/sw_veid_bundle_init.bin",
  "tu102/gr/gpccs_inst.bin",
  "tu102/gr/sw_bundle_init.bin",
  "tu102/gr/gpccs_data.bin",
  "tu102/gr/sw_method_init.bin",
  "tu102/gr/fecs_sig.bin",
  "tu102/gr/fecs_inst.bin",
  "tu102/sec2/desc.bin",
  "tu102/sec2/image.bin",
  "tu102/sec2/sig.bin",
  "tu102/nvdec/scrubber.bin",
  "gp106/acr/ucode_unload.bin",
  "gp106/acr/bl.bin",
  "gp106/acr/ucode_load.bin",
  "gp106/acr/unload_bl.bin",
  "gp106/gr/gpccs_bl.bin",
  "gp106/gr/fecs_bl.bin",
  "gp106/gr/sw_ctx.bin",
  "gp106/gr/gpccs_sig.bin",
  "gp106/gr/fecs_data.bin",
  "gp106/gr/sw_nonctx.bin",
  "gp106/gr/gpccs_inst.bin",
  "gp106/gr/sw_bundle_init.bin",
  "gp106/gr/gpccs_data.bin",
  "gp106/gr/sw_method_init.bin",
  "gp106/gr/fecs_sig.bin",
  "gp106/gr/fecs_inst.bin",
  "gp106/sec2/desc-1.bin",
  "gp106/sec2/desc.bin",
  "gp106/sec2/sig-1.bin",
  "gp106/sec2/image.bin",
  "gp106/sec2/sig.bin",
  "gp106/sec2/image-1.bin",
  "gp106/nvdec/scrubber.bin",
  "ga100/gsp/booter_load-535.113.01.bin",
  "ga100/gsp/booter_unload-535.113.01.bin",
  "ga100/gsp/bootloader-535.113.01.bin",
  "ga100/gsp/gsp-535.113.01.bin",
  "ga104/acr/ucode_ahesasc.bin",
  "ga104/acr/ucode_asb.bin",
  "ga104/acr/ucode_unload.bin",
  "ga104/gr/gpccs_bl.bin",
  "ga104/gr/gpccs_sig.bin",
  "ga104/gr/fecs_bl.bin",
  "ga104/gr/NET_img.bin",
  "ga104/gr/fecs_sig.bin",
  "ga104/nvdec/scrubber.bin",
  "ga104/sec2/desc.bin",
  "ga104/sec2/hs_bl_sig.bin",
  "ga104/sec2/image.bin",
  "ga104/sec2/sig.bin",
  "ga104/gsp/booter_load-535.113.01.bin",
  "ga104/gsp/booter_unload-535.113.01.bin",
  "ga104/gsp/gsp-535.113.01.bin",
  "ga104/gsp/bootloader-535.113.01.bin",
  "ga102/gsp/booter_load-535.113.01.bin",
  "ga102/gsp/booter_unload-535.113.01.bin",
  "ga102/gsp/gsp-535.113.01.bin",
  "ga102/gsp/bootloader-535.113.01.bin",
  "ga102/acr/ucode_ahesasc.bin",
  "ga102/acr/ucode_unload.bin",
  "ga102/acr/ucode_asb.bin",
  "ga102/gr/gpccs_bl.bin",
  "ga102/gr/gpccs_sig.bin",
  "ga102/gr/fecs_bl.bin",
  "ga102/gr/NET_img.bin",
  "ga102/gr/fecs_sig.bin",
  "ga102/sec2/desc.bin",
  "ga102/sec2/hs_bl_sig.bin",
  "ga102/sec2/image.bin",
  "ga102/sec2/sig.bin",
  "ga102/nvdec/scrubber.bin",
  "gp10b/pmu/desc.bin",
  "gp10b/pmu/image.bin",
  "gp10b/pmu/sig.bin",
  "gp10b/acr/bl.bin",
  "gp10b/acr/ucode_load.bin",
  "gp10b/gr/gpccs_bl.bin",
  "gp10b/gr/sw_ctx.bin",
  "gp10b/gr/gpccs_sig.bin",
  "gp10b/gr/fecs_bl.bin",
  "gp10b/gr/fecs_data.bin",
  "gp10b/gr/sw_nonctx.bin",
  "gp10b/gr/gpccs_inst.bin",
  "gp10b/gr/sw_bundle_init.bin",
  "gp10b/gr/gpccs_data.bin",
  "gp10b/gr/sw_method_init.bin",
  "gp10b/gr/fecs_sig.bin",
  "gp10b/gr/fecs_inst.bin",
  "gp108/acr/ucode_unload.bin",
  "gp108/acr/bl.bin",
  "gp108/acr/ucode_load.bin",
  "gp108/acr/unload_bl.bin",
  "gp108/gr/gpccs_bl.bin",
  "gp108/gr/sw_ctx.bin",
  "gp108/gr/gpccs_sig.bin",
  "gp108/gr/fecs_bl.bin",
  "gp108/gr/fecs_data.bin",
  "gp108/gr/sw_nonctx.bin",
  "gp108/gr/gpccs_inst.bin",
  "gp108/gr/sw_bundle_init.bin",
  "gp108/gr/gpccs_data.bin",
  "gp108/gr/sw_method_init.bin",
  "gp108/gr/fecs_sig.bin",
  "gp108/gr/fecs_inst.bin",
  "gp108/sec2/desc.bin",
  "gp108/sec2/image.bin",
  "gp108/sec2/sig.bin",
  "gp108/nvdec/scrubber.bin",
  "tu116/gsp/booter_load-535.113.01.bin",
  "tu116/gsp/booter_unload-535.113.01.bin",
  "tu116/gsp/bootloader-535.113.01.bin",
  "tu116/gsp/gsp-535.113.01.bin",
  "tu116/acr/ucode_ahesasc.bin",
  "tu116/acr/ucode_unload.bin",
  "tu116/acr/ucode_asb.bin",
  "tu116/acr/bl.bin",
  "tu116/acr/unload_bl.bin",
  "tu116/gr/gpccs_bl.bin",
  "tu116/gr/sw_ctx.bin",
  "tu116/gr/gpccs_sig.bin",
  "tu116/gr/fecs_bl.bin",
  "tu116/gr/fecs_data.bin",
  "tu116/gr/sw_nonctx.bin",
  "tu116/gr/sw_veid_bundle_init.bin",
  "tu116/gr/gpccs_inst.bin",
  "tu116/gr/sw_bundle_init.bin",
  "tu116/gr/gpccs_data.bin",
  "tu116/gr/sw_method_init.bin",
  "tu116/gr/fecs_sig.bin",
  "tu116/gr/fecs_inst.bin",
  "tu116/sec2/desc.bin",
  "tu116/sec2/image.bin",
  "tu116/sec2/sig.bin",
  "tu116/nvdec/scrubber.bin",
  "tu104/acr/ucode_ahesasc.bin",
  "tu104/acr/ucode_unload.bin",
  "tu104/acr/ucode_asb.bin",
  "tu104/acr/bl.bin",
  "tu104/acr/unload_bl.bin",
  "tu104/gr/gpccs_bl.bin",
  "tu104/gr/sw_ctx.bin",
  "tu104/gr/gpccs_sig.bin",
  "tu104/gr/fecs_bl.bin",
  "tu104/gr/fecs_data.bin",
  "tu104/gr/sw_nonctx.bin",
  "tu104/gr/sw_veid_bundle_init.bin",
  "tu104/gr/gpccs_inst.bin",
  "tu104/gr/sw_bundle_init.bin",
  "tu104/gr/gpccs_data.bin",
  "tu104/gr/sw_method_init.bin",
  "tu104/gr/fecs_sig.bin",
  "tu104/gr/fecs_inst.bin",
  "tu104/sec2/desc.bin",
  "tu104/sec2/image.bin",
  "tu104/sec2/sig.bin",
  "tu104/nvdec/scrubber.bin",
  "tu104/gsp/booter_load-535.113.01.bin",
  "tu104/gsp/booter_unload-535.113.01.bin",
  "tu104/gsp/gsp-535.113.01.bin",
  "tu104/gsp/bootloader-535.113.01.bin",
  "gv100/acr/ucode_unload.bin",
  "gv100/acr/bl.bin",
  "gv100/acr/ucode_load.bin",
  "gv100/acr/unload_bl.bin",
  "gv100/gr/gpccs_bl.bin",
  "gv100/gr/sw_ctx.bin",
  "gv100/gr/gpccs_sig.bin",
  "gv100/gr/fecs_bl.bin",
  "gv100/gr/fecs_data.bin",
  "gv100/gr/sw_nonctx.bin",
  "gv100/gr/gpccs_inst.bin",
  "gv100/gr/sw_bundle_init.bin",
  "gv100/gr/gpccs_data.bin",
  "gv100/gr/sw_method_init.bin",
  "gv100/gr/fecs_sig.bin",
  "gv100/gr/fecs_inst.bin",
  "gv100/sec2/desc.bin",
  "gv100/sec2/image.bin",
  "gv100/sec2/sig.bin",
  "gv100/nvdec/scrubber.bin",
  "gp107/acr/ucode_unload.bin",
  "gp107/acr/bl.bin",
  "gp107/acr/ucode_load.bin",
  "gp107/acr/unload_bl.bin",
  "gp107/gr/gpccs_bl.bin",
  "gp107/gr/sw_ctx.bin",
  "gp107/gr/gpccs_sig.bin",
  "gp107/gr/fecs_bl.bin",
  "gp107/gr/fecs_data.bin",
  "gp107/gr/sw_nonctx.bin",
  "gp107/gr/gpccs_inst.bin",
  "gp107/gr/sw_bundle_init.bin",
  "gp107/gr/gpccs_data.bin",
  "gp107/gr/sw_method_init.bin",
  "gp107/gr/fecs_sig.bin",
  "gp107/gr/fecs_inst.bin",
  "gp107/sec2/desc-1.bin",
  "gp107/sec2/desc.bin",
  "gp107/sec2/sig-1.bin",
  "gp107/sec2/image.bin",
  "gp107/sec2/sig.bin",
  "gp107/sec2/image-1.bin",
  "gp107/nvdec/scrubber.bin",
  "tu106/acr/ucode_ahesasc.bin",
  "tu106/acr/ucode_unload.bin",
  "tu106/acr/ucode_asb.bin",
  "tu106/acr/bl.bin",
  "tu106/acr/unload_bl.bin",
  "tu106/gr/gpccs_bl.bin",
  "tu106/gr/sw_ctx.bin",
  "tu106/gr/gpccs_sig.bin",
  "tu106/gr/fecs_bl.bin",
  "tu106/gr/fecs_data.bin",
  "tu106/gr/sw_nonctx.bin",
  "tu106/gr/sw_veid_bundle_init.bin",
  "tu106/gr/gpccs_inst.bin",
  "tu106/gr/sw_bundle_init.bin",
  "tu106/gr/gpccs_data.bin",
  "tu106/gr/sw_method_init.bin",
  "tu106/gr/fecs_sig.bin",
  "tu106/gr/fecs_inst.bin",
  "tu106/sec2/desc.bin",
  "tu106/sec2/image.bin",
  "tu106/sec2/sig.bin",
  "tu106/nvdec/scrubber.bin",
  "tu106/gsp/booter_load-535.113.01.bin",
  "tu106/gsp/booter_unload-535.113.01.bin",
  "tu106/gsp/gsp-535.113.01.bin",
  "tu106/gsp/bootloader-535.113.01.bin",
  "gm20b/pmu/desc.bin",
  "gm20b/pmu/image.bin",
  "gm20b/pmu/sig.bin",
  "gm20b/acr/bl.bin",
  "gm20b/acr/ucode_load.bin",
  "gm20b/gr/sw_ctx.bin",
  "gm20b/gr/fecs_bl.bin",
  "gm20b/gr/fecs_data.bin",
  "gm20b/gr/sw_nonctx.bin",
  "gm20b/gr/gpccs_inst.bin",
  "gm20b/gr/sw_bundle_init.bin",
  "gm20b/gr/sw_method_init.bin",
  "gm20b/gr/gpccs_data.bin",
  "gm20b/gr/fecs_sig.bin",
  "gm20b/gr/fecs_inst.bin",
  "gm204/acr/ucode_unload.bin",
  "gm204/acr/bl.bin",
  "gm204/acr/ucode_load.bin",
  "gm204/gr/gpccs_bl.bin",
  "gm204/gr/sw_ctx.bin",
  "gm204/gr/gpccs_sig.bin",
  "gm204/gr/fecs_bl.bin",
  "gm204/gr/fecs_data.bin",
  "gm204/gr/sw_nonctx.bin",
  "gm204/gr/gpccs_inst.bin",
  "gm204/gr/sw_bundle_init.bin",
  "gm204/gr/gpccs_data.bin",
  "gm204/gr/sw_method_init.bin",
  "gm204/gr/fecs_sig.bin",
  "gm204/gr/fecs_inst.bin",
]

foreach(item, amdgpu_lib_items) {
    name = item
    ohos_prebuilt_etc("amdgpu_$name") {
        source = "amdgpu/$name"
        install_enable = true
        install_images = [ ramdisk_base_dir, system_base_dir ]
        module_install_dir = "lib/firmware/amdgpu"
        part_name = "device_x86_general"
    }
    amdgpu_lib_deps += [ ":amdgpu_$name" ]
}

foreach(item, intel_lib_items) {
    name = item
    ohos_prebuilt_etc("intel_$name") {
        source = "i915/$name"
        install_enable = true
        install_images = [ ramdisk_base_dir, system_base_dir ]
        module_install_dir = "lib/firmware/i915"
        part_name = "device_x86_general"
    }
    intel_lib_deps += [ ":intel_$name" ]
}

foreach(item, wifi_lib_items) {
    name = item
    ohos_prebuilt_etc("wifi_$name") {
        source = "wifi/$name"
        install_enable = true
        install_images = [ ramdisk_base_dir, system_base_dir ]
        module_install_dir = "lib/firmware/"
        part_name = "device_x86_general"
    }
    wifi_lib_deps += [ ":wifi_$name" ]
}

foreach(item, rtw88_lib_items) {
    name = item
    ohos_prebuilt_etc("rtw88_$name") {
        source = "rtw88/$name"
        install_enable = true
        install_images = [ ramdisk_base_dir, system_base_dir ]
        module_install_dir = "lib/firmware/rtw88"
        part_name = "device_x86_general"
    }
    rtw88_lib_deps += [ ":rtw88_$name" ]
}

foreach(item, rtl_bt_lib_items) {
    name = item
    ohos_prebuilt_etc("rtl_bt_$name") {
        source = "rtl_bt/$name"
        install_enable = true
        install_images = [ ramdisk_base_dir, system_base_dir ]
        module_install_dir = "lib/firmware/rtl_bt"
        part_name = "device_x86_general"
    }
    rtl_bt_lib_deps += [ ":rtl_bt_$name" ]
}

foreach(item, radeon_lib_items) {
    name = item
    ohos_prebuilt_etc("radeon_$name") {
        source = "radeon/$name"
        install_enable = true
        install_images = [ ramdisk_base_dir, system_base_dir ]
        module_install_dir = "lib/firmware/radeon"
        part_name = "device_x86_general"
    }
    radeon_lib_deps += [ ":radeon_$name" ]
}

foreach(item, nvidia_lib_items) {
    name = item
    path = get_path_info(name, "dir")
    ohos_prebuilt_etc("nvidia_$name") {
        source = "nvidia/$name"
        install_enable = true
        install_images = [ ramdisk_base_dir, system_base_dir ]
        module_install_dir = "lib/firmware/nvidia/$path"
        part_name = "device_x86_general"
    }
    nvidia_lib_deps += [ ":nvidia_$name" ]
}

ohos_prebuilt_etc("regulatory.db") {
  source = "regulatory.db"
  part_name = "device_x86_general"
  install_images = [ ramdisk_base_dir, system_base_dir ]
  module_install_dir = "lib/firmware"
  install_enable = true
}

ohos_prebuilt_etc("regulatory.db.p7s") {
  source = "regulatory.db.p7s"
  part_name = "device_x86_general"
  install_images = [ ramdisk_base_dir, system_base_dir ]
  module_install_dir = "lib/firmware"
  install_enable = true
}

group("firmware") {
  deps = [
    ":regulatory.db",
    ":regulatory.db.p7s",
  ]
  deps += amdgpu_lib_deps
  deps += intel_lib_deps
  deps += wifi_lib_deps
  deps += rtw88_lib_deps
  deps += rtl_bt_lib_deps
  deps += radeon_lib_deps
  deps += nvidia_lib_deps
}
